# mcpbuilder-ai

./: README.md
examples/python/: README.md
examples/python/docs/: petstore_example.yaml
examples/python/mcp_integration_demo/: main.py  requirements.txt
examples/typescript/: .env.example  README.md  index.html  package.json  vite.config.ts
examples/typescript/src/: App.tsx  styles.css  vite-env.d.ts
examples/typescript/src/components/: ChatInterface.tsx  ConfigForm.tsx  MessageList.tsx  ToolConsentModal.tsx
python-sdk/: .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
python-sdk/examples/: callback_chat.py  cli_chat.py  service_integration.py
python-sdk/src/mcpbuilder/: __init__.py  chat.py  client.py  config.py  types.py  websocket_client.py
python-sdk/tests/: __init__.py  test_config.py
typescript-sdk/: .gitlab-ci.yml  LICENSE  README.md  eslint.config.js  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json
typescript-sdk/examples/: basic-usage.ts  cli-chat.ts  service-integration.ts
typescript-sdk/scripts/: fix-cjs.js
typescript-sdk/src/: client.ts  index.ts  types.ts  websocket-client.ts
typescript-sdk/tests/: client.test.ts  types.test.ts
