[tool.poetry]
name = "mcpbuilder-ai"
version = "0.1.0"
description = "Python SDK for MCPBuilder - MCP agent integration with chat interface"
authors = ["Apichap solutions FlexCo <office@mcp-builder.ai>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "mcpbuilder", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
